feat: Migrate to FastAPI with Excel/PDF export and enhanced file type filtering
- Replace Flask backend with FastAPI for better async support
- Add comprehensive file type support (docx, txt, md, pdf)
- Implement dual export formats (Excel and PDF)
- Enhance UI with file type filtering and statistics
- Add technical documentation and feature roadmap
- Include test files and startup scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
+# === 原有 Flask 依赖(保留用于归档文件 word_count_web_flask_backup.py) ===
 flask
 python-docx
+PyPDF2
+openpyxl
+reportlab
+
+# === 新增 FastAPI 依赖(用于 word_count_fastapi.py) ===
+fastapi
+uvicorn[standard]
+python-multipart
+jinja2
